[package]
name = "rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.node-dandelion-runtime]
path = '../runtime'

[dependencies.pallet-dandelion]
path = '../pallets/dandelion'


[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
sc-client-api = { default-features = false, version = '3.0.0' }
sc-service = { default-features = false, version = '0.9.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
jsonrpc-core = '15.1'
jsonrpc-derive = '15.1'
jsonrpc-core-client = '15.1'